fix: dev: the better url parsing.
Signed-off-by: yhli <chigix@zoho.com>